# wmh-mc-seg

./: .env.example  .gitignore  Dockerfile  MLproject  README.md  ceibo-plugin.yaml  conda.yaml  docker-compose.yaml  mercure.py  pyproject.toml  python_env.yaml  requirements.txt
.atl/: skill-registry.md
.github/workflows/: ci.yml
.trash/: lesion_means.ipynb
marimo/: analysis.py  viewer.py
notebooks/: metrics.ipynb  metrics_a.ipynb  metrics_s.ipynb  metrics_u.ipynb  plot.py  trained_models.md  uncertainty_by_volume.ipynb  uncertainty_maps.ipynb
notebooks/deprecated/: CE_grouped.ipynb  excluded_figs.ipynb  fig3.ipynb  fig4.ipynb  fig5.ipynb  fig6.ipynb  intro_plots.ipynb  training_with_all.ipynb  training_with_all_UtrechtSpace.ipynb  training_with_one_UtrechtSpace.ipynb
notebooks/experiments/: CE_ungrouped.ipynb  Dice_grouped.ipynb
notebooks/main/: CE_grouped.ipynb  base_preprocessing.ipynb  datasets_preparation.ipynb
notebooks/metrics/: training_with_all.ipynb  training_with_one.ipynb  utils.py
notebooks/preprocessing/: base_preprocessing.ipynb  utils.py
notebooks/training_Utrecht/: metrics_u.ipynb
notebooks/training_Utrecht_MEEP_9381/: metrics_u.ipynb
notebooks/training_Utrecht_ce_7704/: metrics_u.ipynb  utrecht-amsterdam.csv  utrecht-singapore.csv  utrecht-utrecht.csv
notebooks/training_Utrecht_dice_1335/: metrics_u.ipynb  (+3 more)
src/: analysis.py  common.py  datamodules.py  model.py  plot.py  predict.py  train.py
tests/: conftest.py  test_analysis.py  test_cli.py  test_integration.py  test_losses.py  test_metrics.py  test_transforms.py
(+33 files in other folders)
