[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wmh-mc-seg"
version = "1.0.0"
description = "WMH MRI segmentation with Monte Carlo dropout uncertainty estimation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0,<3.0",
    "lightning>=2.0,<3.0",
    "monai>=1.3,<2.0",
    "torchio>=0.19,<1.0",
    "torchmetrics>=1.0,<2.0",
    "SimpleITK>=2.2",
    "mlflow>=2.0",
    "click>=8.0",
    "numpy>=1.23",
    "scipy>=1.10",
    "nibabel>=5.0",
    "MedPy>=0.4",
    "PyYAML>=6.0",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "statannotations>=0.6",
    "scikit-learn>=1.2",
    "uncertainty-calibration",
    "shap>=0.41",
    "pytest>=7.0",
]
interactive = ["marimo>=0.10"]

[tool.pytest.ini_options]
markers = [
    "integration: end-to-end pipeline tests using synthetic data (no real dataset needed)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
